[package]
name = "joke_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compound_duration = "1.2.0"
nostr-bot = { git = "https://github.com/slaninas/nostr-bot" }
reqwest = "0.11.11"
secp256k1 = {version = "0.23.3", features = ["rand", "rand-std", "bitcoin_hashes"]}
tokio = "1.20.1"
